--- a/Group3Project/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/Group3Project/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -2,10 +2,15 @@ a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
+  color: white
 }
-
+.span{
+  color: white
+}
 html {
   font-size: 14px;
+  color: white
+
 }
 @media (min-width: 768px) {
   html {
