made buttons cuter

--- a/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
+++ b/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
@@ -1,5 +1,14 @@
-<h1 style="text-align: center" *ngIf="!loggedIn">Please log in to play! <br>
-  <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7cWgnRxWaeg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h1 style="text-align: center" *ngIf="!loggedIn">
+  Please log in to play! <br />
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube-nocookie.com/embed/7cWgnRxWaeg"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+  ></iframe>
 </h1>
 <div id="border" *ngIf="loggedIn">
   <div
