--- a/Group3Project/ClientApp/src/app/tod-changer/tod-changer.component.html
+++ b/Group3Project/ClientApp/src/app/tod-changer/tod-changer.component.html
@@ -18,5 +18,5 @@
     <option *ngFor="let d of difficulty" [value]="d.num">{{ d.label }}</option>
   </select>
 
-  <button>Submit</button>
+  <button class="btn-toggle">Submit</button>
 </form>
