Final CSS tweaks before demo day....

--- a/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
+++ b/Group3Project/ClientApp/src/app/calculate-capacity/calculate-capacity.component.html
@@ -1,12 +1,12 @@
 <h1 style="text-align: center" *ngIf="!loggedIn">
   Please log in to play! <br />
   <iframe
-    width="100%"
-    height="1000%"
+    class="col-6"
+    height="500px"
     src="https://www.youtube.com/embed/xHa2VxKcZ3g"
     title="YouTube video player"
-    frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    frameborder="0"
     allowfullscreen
   ></iframe>
 </h1>
